
[package]
name = "dual_contouring"
version = "0.1.1"
edition = "2021"

[dependencies]
glam = "0.25"

[dev-dependencies]
bevy = "0.12"
smooth-bevy-cameras = "0.10"
# As of this writing, bevy_infinite_grid v0.9 is the most recent crates.io release. This is not updated
# to work with bevy v0.12, but the github repo is.
bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid" }